--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <h3>Mis Primeras Tareas Git:</h3>
       <ol>
         <li>Hacer fork de este repositorio ✅</li>
-        <li>Clonar el repositorio localmente ⏳</li>
-        <li>Modificar este archivo HTML ⏳</li>
-        <li>Hacer commit de los cambios ⏳</li>
-        <li>Hacer push a Github ⏳</li>
+        <li>Clonar el repositorio localmente</li>
+        <li>Modificar este archivo HTML</li>
+        <li>Hacer commit de los cambios</li>
+        <li>Hacer push a Github</li>
       </ol>
     </div>
   </div>
