docs: modificación de archivos
Se modifican archivos index.html y README.md

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     </div>
 
     <div class="task-list">
-      <h3>Mis Primeras Tareas Git:</h3>
+      <h3>Mis Tareas de Git con GitHub (recargado):</h3>
       <ol>
-        <li>Hacer fork de este repositorio ✅</li>
-        <li>Clonar el repositorio localmente</li>
-        <li>Modificar este archivo HTML</li>
+        <li>Clonar este repositorio en tu máquina local ✅</li>
+        <li>Modificar este archivo o el de comandos_git.txt</li>
         <li>Hacer commit de los cambios</li>
-        <li>Hacer push a Github</li>
+        <li>Hacer push a GitHub</li>
+        <li>Ingresar a tu cuenta de GitHub y crear un PR</li>
       </ol>
     </div>
   </div>
